--- a/proj.android-studio/app/AndroidManifest.xml
+++ b/proj.android-studio/app/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <activity
             android:name="org.cocos2dx.cpp.AppActivity"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
